{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 13,
  "lineage": "e5e53009-8c50-5fea-9b18-42eb9b1463c5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649418801823:internet-gateway/igw-0d591bc85e38584c0",
            "id": "igw-0d591bc85e38584c0",
            "owner_id": "649418801823",
            "tags": {
              "Name": "bookverse-igw"
            },
            "tags_all": {
              "Name": "bookverse-igw"
            },
            "vpc_id": "vpc-0a6bf1bc3448c6d3b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649418801823:route-table/rtb-0b5b31297974f6354",
            "id": "rtb-0b5b31297974f6354",
            "owner_id": "649418801823",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d591bc85e38584c0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bookverse-public-rt"
            },
            "tags_all": {
              "Name": "bookverse-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6bf1bc3448c6d3b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a76c792b7578f17",
            "route_table_id": "rtb-0b5b31297974f6354",
            "subnet_id": "subnet-05690ff29ce376c26"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9651853c7e0478c",
            "route_table_id": "rtb-0b5b31297974f6354",
            "subnet_id": "subnet-0b5fe15a3c797cf72"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649418801823:security-group/sg-03a81eba686b49ad2",
            "description": "Allow HTTP/HTTPS from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a81eba686b49ad2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bookverse-alb-sg",
            "name_prefix": "",
            "owner_id": "649418801823",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bookverse-alb-sg"
            },
            "tags_all": {
              "Name": "bookverse-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6bf1bc3448c6d3b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649418801823:security-group/sg-03817fe7640cca2bf",
            "description": "Allow HTTP from ALB and SSH from my IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03817fe7640cca2bf",
            "ingress": [
              {
                "cidr_blocks": [
                  "130.85.195.238/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03a81eba686b49ad2"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bookverse-ec2-sg",
            "name_prefix": "",
            "owner_id": "649418801823",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bookverse-ec2-sg"
            },
            "tags_all": {
              "Name": "bookverse-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6bf1bc3448c6d3b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649418801823:security-group/sg-00c13032695f0cf95",
            "description": "Allow DB access from EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c13032695f0cf95",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03817fe7640cca2bf"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "bookverse-rds-sg",
            "name_prefix": "",
            "owner_id": "649418801823",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bookverse-rds-sg"
            },
            "tags_all": {
              "Name": "bookverse-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6bf1bc3448c6d3b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649418801823:subnet/subnet-00cb6d132d4a95e54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cb6d132d4a95e54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "649418801823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bookverse-private-a"
            },
            "tags_all": {
              "Name": "bookverse-private-a"
            },
            "vpc_id": "vpc-0a6bf1bc3448c6d3b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649418801823:subnet/subnet-04df6a333113adecc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04df6a333113adecc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "649418801823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bookverse-private-b"
            },
            "tags_all": {
              "Name": "bookverse-private-b"
            },
            "vpc_id": "vpc-0a6bf1bc3448c6d3b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649418801823:subnet/subnet-05690ff29ce376c26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05690ff29ce376c26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "649418801823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bookverse-public-a"
            },
            "tags_all": {
              "Name": "bookverse-public-a"
            },
            "vpc_id": "vpc-0a6bf1bc3448c6d3b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649418801823:subnet/subnet-0b5fe15a3c797cf72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5fe15a3c797cf72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "649418801823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bookverse-public-b"
            },
            "tags_all": {
              "Name": "bookverse-public-b"
            },
            "vpc_id": "vpc-0a6bf1bc3448c6d3b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649418801823:vpc/vpc-0a6bf1bc3448c6d3b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08a667ab43d8df44e",
            "default_route_table_id": "rtb-0f355a594c7eaa09f",
            "default_security_group_id": "sg-08142f71b0317896a",
            "dhcp_options_id": "dopt-05c6a27ff8e674176",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a6bf1bc3448c6d3b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f355a594c7eaa09f",
            "owner_id": "649418801823",
            "tags": {
              "Name": "bookverse-vpc"
            },
            "tags_all": {
              "Name": "bookverse-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}